# stool

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
example/: README.md
example/my-project/: tasks.py
example/my-project/_stool/: __init__.py  _settings.py  deploy.py
src/stool/: __init__.py  _shell.py  cli.py  hello.py  init.py  pdf.py  settings.py  tasks.py  utils.py
