[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stool"
version = "0.1.0"
description = "Modern Python project task management"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "invoke>=2.2.0",
]

[project.scripts]
stool-init = "stool.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "ipython"
]
pdf = [
    "pypdf>=5.0.0",
]
all = [
    "invoke>=2.2.0",
    "pypdf>=5.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/stool"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
